--- a/source/less/blocks/carousel-rates.less
+++ b/source/less/blocks/carousel-rates.less
@@ -7,7 +7,8 @@
 
   @media (min-width: @tablet-width) {
     font-size: 0;
-    padding: 30px 40px;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 
   @media (min-width: @desktop-width) {
@@ -44,7 +45,7 @@
   @media (min-width: @tablet-width) {
     display: inline-block;
     vertical-align: middle;
-    width: 24%;
+    width: 25%;
     margin-right: -2px;
     font-size: 0;
   }
@@ -130,7 +131,7 @@
 .carousel-rates__text {
   position: relative;
   box-sizing: content-box;
-  padding: 0 20px;
+  padding: 0 15px;
   min-height: 60px;
 
   text-align: left;
